Fix all visual effects and layout issues
- Fix button 3D hover effect (pop out 10px with bevel shadow)
- Fix button active state (snap back flush with fast transition)
- Add spark animation on button click (3 sparks at 15, 45, 75)
- Fix button navigation (internal links scroll, external links open)
- Add 300ms delay before button action to show spark animation
- Fix WHOOPSY title text-shadow and hover effects
- Fix game image loading (import as modules)
- Fix game showcase layout (image left, text right, 64px gap)
- Prevent image from shrinking (flex-shrink-0)
- Make text wrap properly (flex-1 min-w-0)
- Add TypeScript declarations for image imports
- Add custom CSS for button styles and animations

--- a/index.html
+++ b/index.html
@@ -1,174 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WHOOPSY - Game Studio</title>
+    <meta name="description" content="WHOOPSY Games - Games with soul. One dev. One vision." />
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="buttons.css">
-</head>
-<body>
-    <!-- Navigation -->
-    <nav>
-        <div class="container">
-            <a href="#" class="logo">WHOOPSY</a>
-            <div class="nav-links">
-                <a href="#about">ABOUT</a>
-                <a href="#game">GAME</a>
-                <a href="#philosophy">PHILOSOPHY</a>
-                <a href="#contact">CONTACT</a>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1 class="glitch-text">WHOOPSY</h1>
-                <p class="tagline">GAMES WITH SOUL. ONE DEV. ONE VISION.</p>
-                <div class="btn-wrapper">
-                    <a href="#game" class="btn-3d">SEE OUR GAME</a>
-                    <div class="spark spark-1"></div>
-                    <div class="spark spark-2"></div>
-                    <div class="spark spark-3"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="about" id="about">
-        <div class="container">
-            <h2 class="section-title">THE SOLO STUDIO</h2>
-            <div class="about-content">
-                <div class="about-card">
-                    <h3>ONE PERSON, ENDLESS PASSION</h3>
-                    <p>Whoopsy is a one-person game studio driven by an obsession with creating games that have soul. Every pixel, every mechanic, every moment is crafted with intention. No corporate influence, no compromise—just pure, unfiltered creativity.</p>
-                    <div class="about-stats">
-                        <div class="stat">
-                            <span class="stat-number">1</span>
-                            <span class="stat-label">DEVELOPER</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number">∞</span>
-                            <span class="stat-label">SOUL</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="about-card">
-                    <h3>THE MISSION</h3>
-                    <p>In a world of formulaic games and endless sequels, Whoopsy exists to break the mold. We believe games should make you feel something—whether it's wonder, challenge, or just pure joy. Every project is an experiment in pushing boundaries and finding new ways to connect with players.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Game Section -->
-    <section class="game" id="game">
-        <div class="container">
-            <h2 class="section-title">NOW AVAILABLE</h2>
-            <div class="game-banner">
-                <span>// PROJECT: LEAP OF FAITH ///</span>
-            </div>
-            <div class="game-showcase">
-                <div class="game-layout">
-                    <div class="game-image-side">
-                        <img src="Leap_Of_Faith/Images/LibraryCapsule.png" alt="Leap of Faith">
-                    </div>
-                    <div class="game-content-side">
-                        <h2>LEAP OF FAITH</h2>
-                        <p class="game-tagline">Unlimited local multiplayer chaos!</p>
-                        <p class="game-description">
-                            The party game where everyone plays. Connect infinite controllers and phones, control wobbly giraffes, and race to the rocket ship. The more players, the more chaos!
-                        </p>
-                        <div class="btn-wrapper">
-                            <a href="https://store.steampowered.com/app/3628800/Leap_Of_Faith/" target="_blank" class="btn-3d">WISHLIST ON STEAM</a>
-                            <div class="spark spark-1"></div>
-                            <div class="spark spark-2"></div>
-                            <div class="spark spark-3"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Philosophy Section -->
-    <section class="philosophy" id="philosophy">
-        <div class="container">
-            <h2 class="section-title">WHY SOUL MATTERS</h2>
-            <div class="philosophy-grid">
-                <div class="philosophy-card">
-                    <span class="philosophy-number">01</span>
-                    <h3 class="philosophy-title">AUTHENTICITY</h3>
-                    <p class="philosophy-text">Every element comes from a place of genuine passion. No checkboxes, no trends—just what feels right.</p>
-                </div>
-                <div class="philosophy-card">
-                    <span class="philosophy-number">02</span>
-                    <h3 class="philosophy-title">CONNECTION</h3>
-                    <p class="philosophy-text">Games should bridge the gap between creator and player, creating moments that resonate.</p>
-                </div>
-                <div class="philosophy-card">
-                    <span class="philosophy-number">03</span>
-                    <h3 class="philosophy-title">COURAGE</h3>
-                    <p class="philosophy-text">Taking risks, embracing imperfection, and creating something that truly matters.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer id="contact">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">WHOOPSY</div>
-                <div class="social-links">
-                    <div class="btn-wrapper">
-                        <a href="https://x.com/SilasBazar" target="_blank" class="btn-3d">X / TWITTER</a>
-                        <div class="spark spark-1"></div>
-                        <div class="spark spark-2"></div>
-                        <div class="spark spark-3"></div>
-                    </div>
-                    <div class="btn-wrapper">
-                        <a href="mailto:silasbazar@gmail.com" class="btn-3d">EMAIL</a>
-                        <div class="spark spark-1"></div>
-                        <div class="spark spark-2"></div>
-                        <div class="spark spark-3"></div>
-                    </div>
-                </div>
-                <div class="copyright">© 2026 WHOOPSY GAMES. ALL RIGHTS RESERVED.</div>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Smooth scrolling for anchor links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Automatic spark effect initialization for all 3D buttons
-        document.querySelectorAll('.btn-3d').forEach(btn => {
-            const wrapper = btn.closest('.btn-wrapper');
-            if (wrapper) {
-                btn.addEventListener('mousedown', () => {
-                    wrapper.classList.remove('popping');
-                    void wrapper.offsetWidth; // Trigger reflow to restart animation
-                    wrapper.classList.add('popping');
-                });
-            }
-        });
-    </script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
